fixing code + add flipclock

--- a/simpleanalog.html
+++ b/simpleanalog.html
@@ -1,132 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-<meta charset="UTF-8">
-<title>Fixed Analog Clock</title>
-
-<style>
-  body {
-    margin: 0;
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background: transparent;
-    font-family: Arial, sans-serif;
-  }
-
-  .clock {
-    position: relative;
-    width: 300px;
-    height: 300px;
-    border: 8px solid #63a9ff;
-    border-radius: 50%;
-    background: transparent;
-  }
-
-  /* Numbers */
-  .number {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    text-align: center;
-    font-size: 20px;
-    font-weight: bold;
-    transform: rotate(calc(30deg * var(--n)));
-  }
-
-  .number span {
-    display: block;
-    transform: rotate(calc(-30deg * var(--n)));
-    margin-top: 12px;
-  }
-
-  /* Hands */
-  .hand {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform-origin: 50% 100%;
-    transform: translate(-50%, -100%) rotate(0deg);
-    background: #555;
-    border-radius: 4px;
-  }
-
-  .hour {
-    width: 6px;
-    height: 70px;
-  }
-
-  .minute {
-    width: 4px;
-    height: 100px;
-  }
-
-  .second {
-    width: 2px;
-    height: 120px;
-    background: red;
-  }
-
-  .center {
-    position: absolute;
-    width: 12px;
-    height: 12px;
-    background: black;
-    border-radius: 50%;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-  }
-</style>
-</head>
-
-<body>
-
-<div class="clock">
-  <!-- Numbers -->
-  <div class="number" style="--n:1"><span>1</span></div>
-  <div class="number" style="--n:2"><span>2</span></div>
-  <div class="number" style="--n:3"><span>3</span></div>
-  <div class="number" style="--n:4"><span>4</span></div>
-  <div class="number" style="--n:5"><span>5</span></div>
-  <div class="number" style="--n:6"><span>6</span></div>
-  <div class="number" style="--n:7"><span>7</span></div>
-  <div class="number" style="--n:8"><span>8</span></div>
-  <div class="number" style="--n:9"><span>9</span></div>
-  <div class="number" style="--n:10"><span>10</span></div>
-  <div class="number" style="--n:11"><span>11</span></div>
-  <div class="number" style="--n:12"><span>12</span></div>
-
-  <!-- Hands -->
-  <div class="hand hour" id="hour"></div>
-  <div class="hand minute" id="minute"></div>
-  <div class="hand second" id="second"></div>
-
-  <div class="center"></div>
-</div>
-
-<script>
-  function updateClock() {
-    const now = new Date();
-
-    const sec = now.getSeconds();
-    const min = now.getMinutes();
-    const hr = now.getHours() % 12;
-
-    document.getElementById("second").style.transform =
-      `translate(-50%, -100%) rotate(${sec * 6}deg)`;
-
-    document.getElementById("minute").style.transform =
-      `translate(-50%, -100%) rotate(${min * 6 + sec * 0.1}deg)`;
-
-    document.getElementById("hour").style.transform =
-      `translate(-50%, -100%) rotate(${hr * 30 + min * 0.5}deg)`;
-  }
-
-  setInterval(updateClock, 1000);
-  updateClock();
-</script>
-
-</body>
-</html>
+<!doctypehtml><html lang=en><meta charset=UTF-8><title>Fixed Analog Clock</title><style>body{margin:0;height:100vh;display:flex;justify-content:center;align-items:center;background:0 0;font-family:Arial,sans-serif}.clock{position:relative;width:300px;height:300px;border:8px solid #63a9ff;border-radius:50%;background:0 0}.number{position:absolute;width:100%;height:100%;text-align:center;font-size:20px;font-weight:700;transform:rotate(calc(30deg * var(--n)))}.number span{display:block;transform:rotate(calc(-30deg * var(--n)));margin-top:12px}.hand{position:absolute;top:50%;left:50%;transform-origin:50% 100%;transform:translate(-50%,-100%) rotate(0);background:#555;border-radius:4px}.hour{width:6px;height:70px}.minute{width:4px;height:100px}.second{width:2px;height:120px;background:red}.center{position:absolute;width:12px;height:12px;background:#000;border-radius:50%;top:50%;left:50%;transform:translate(-50%,-50%)}</style><div class=clock><div class=number style=--n:1><span>1</span></div><div class=number style=--n:2><span>2</span></div><div class=number style=--n:3><span>3</span></div><div class=number style=--n:4><span>4</span></div><div class=number style=--n:5><span>5</span></div><div class=number style=--n:6><span>6</span></div><div class=number style=--n:7><span>7</span></div><div class=number style=--n:8><span>8</span></div><div class=number style=--n:9><span>9</span></div><div class=number style=--n:10><span>10</span></div><div class=number style=--n:11><span>11</span></div><div class=number style=--n:12><span>12</span></div><div class="hand hour"id=hour></div><div class="hand minute"id=minute></div><div class="hand second"id=second></div><div class=center></div></div><script>function updateClock(){const t=new Date,e=t.getSeconds(),n=t.getMinutes(),o=t.getHours()%12;document.getElementById("second").style.transform=`translate(-50%, -100%) rotate(${6*e}deg)`,document.getElementById("minute").style.transform=`translate(-50%, -100%) rotate(${6*n+.1*e}deg)`,document.getElementById("hour").style.transform=`translate(-50%, -100%) rotate(${30*o+.5*n}deg)`}setInterval(updateClock,1e3),updateClock()</script>
