--- a/simpledigital.html
+++ b/simpledigital.html
@@ -1,328 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <title>Compact 7-Segment Clock</title>
-
-    <style>
-      :root {
-        --led-on: red;
-        --led-off: #ffffff1f;
-        --glow: 0 0 30px white;
-      }
-
-      body {
-        margin: 0;
-        height: 100vh;
-        display: flex;
-        justify-content: center;
-        align-items: end;
-        background: transparent;
-        font-family: monospace;
-        overflow: hidden;
-      }
-
-      /* LAYOUT */
-      .wrapper {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        gap: 0px;
-      }
-
-      /* CLOCK */
-      .clock {
-        display: flex;
-        gap: 14px;
-        background: #111;
-        padding: 16px 26px;
-        border-radius: 14px;
-      }
-
-      .digit {
-        position: relative;
-        width: 50px;
-        height: 86px;
-      }
-
-      .seg {
-        position: absolute;
-        background: var(--led-off);
-        border-radius: 4px;
-      }
-
-      .on {
-        background: var(--led-on);
-        box-shadow: var(--glow);
-      }
-
-      /* SEGMENTS */
-      .a {
-        top: 0;
-        left: 8px;
-        width: 34px;
-        height: 6px;
-      }
-      .b {
-        top: 6px;
-        right: 0;
-        width: 6px;
-        height: 34px;
-      }
-      .c {
-        bottom: 6px;
-        right: 0;
-        width: 6px;
-        height: 34px;
-      }
-      .d {
-        bottom: 0;
-        left: 8px;
-        width: 34px;
-        height: 6px;
-      }
-      .e {
-        bottom: 6px;
-        left: 0;
-        width: 6px;
-        height: 34px;
-      }
-      .f {
-        top: 6px;
-        left: 0;
-        width: 6px;
-        height: 34px;
-      }
-      .g {
-        top: 40px;
-        left: 8px;
-        width: 34px;
-        height: 6px;
-      }
-
-      /* COLON */
-      .colon {
-        display: flex;
-        flex-direction: column;
-        justify-content: space-around;
-        padding: 16px 0;
-      }
-      .dot {
-        width: 8px;
-        height: 8px;
-        background: var(--led-on);
-        box-shadow: var(--glow);
-        border-radius: 50%;
-      }
-
-      /* INFO FADE */
-      .info {
-        position: relative;
-        height: 60px; /* was 28px */
-        width: 100%;
-        margin-top: 12px; /* space from clock */
-        /* overflow: hidden; IMPORTANT */
-      }
-
-      .fade-item {
-        position: absolute;
-        inset: 0;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        opacity: 0;
-        transform: translateY(6px);
-        transition: opacity 0.8s ease, transform 0.8s ease;
-      }
-
-      .fade-item.show {
-        opacity: 1;
-        transform: translateY(0);
-      }
-
-      .weather,
-      .date,
-      .username {
-        font-size: 50px;
-        color: var(--led-on);
-        text-shadow: var(--glow);
-        text-wrap: nowrap;
-        font-weight: bolder;
-      }
-    </style>
-  </head>
-
-  <body>
-    <div class="wrapper">
-      <div class="clock" id="clock"></div>
-
-      <div class="info">
-        <div class="fade-item show" id="dateBox">
-          <div class="date" id="date"></div>
-        </div>
-        <div class="fade-item" id="weatherBox">
-          <div class="weather" id="weather">Loading…</div>
-        </div>
-        <div class="fade-item" id="usernameBox">
-          <div class="username" id="username"></div>
-        </div>
-      </div>
-    </div>
-
-    <script>
-      const queryString = window.location.search;
-      const urlParams = new URLSearchParams(queryString);
-      const username = urlParams.get("u");
-      const keyWeather = urlParams.get("key");
-      const locWeather = urlParams.get("loc");
-
-      /* 7 SEGMENT MAP */
-      const map = {
-        0: ["a", "b", "c", "d", "e", "f"],
-        1: ["b", "c"],
-        2: ["a", "b", "g", "e", "d"],
-        3: ["a", "b", "g", "c", "d"],
-        4: ["f", "g", "b", "c"],
-        5: ["a", "f", "g", "c", "d"],
-        6: ["a", "f", "e", "d", "c", "g"],
-        7: ["a", "b", "c"],
-        8: ["a", "b", "c", "d", "e", "f", "g"],
-        9: ["a", "b", "c", "d", "f", "g"],
-      };
-
-      function digit() {
-        const d = document.createElement("div");
-        d.className = "digit";
-        "abcdefg".split("").forEach((s) => {
-          const seg = document.createElement("div");
-          seg.className = `seg ${s}`;
-          d.appendChild(seg);
-        });
-        return d;
-      }
-
-      function setDigit(d, n) {
-        d.querySelectorAll(".seg").forEach((s) => s.classList.remove("on"));
-        map[n].forEach((s) => d.querySelector("." + s).classList.add("on"));
-      }
-
-      /* CLOCK */
-      const clock = document.getElementById("clock");
-      const digits = [];
-
-      for (let i = 0; i < 6; i++) {
-        if (i === 2 || i === 4) {
-          const c = document.createElement("div");
-          c.className = "colon";
-          c.innerHTML = "<div class='dot'></div><div class='dot'></div>";
-          clock.appendChild(c);
-        }
-        const d = digit();
-        digits.push(d);
-        clock.appendChild(d);
-      }
-
-      setInterval(() => {
-        const n = new Date();
-        const t =
-          n.getHours().toString().padStart(2, "0") +
-          n.getMinutes().toString().padStart(2, "0") +
-          n.getSeconds().toString().padStart(2, "0");
-        [...t].forEach((v, i) => setDigit(digits[i], v));
-      }, 1000);
-
-      /* DATE */
-      function updateDate() {
-        const d = new Date();
-        const days = ["MIN", "SEN", "SEL", "RAB", "KAM", "JUM", "SAB"];
-        document.getElementById("date").textContent = `${
-          days[d.getDay()]
-        } • ${d.getDate()}-${d.getMonth() + 1}-${d.getFullYear()}`;
-      }
-      updateDate();
-      setInterval(updateDate, 60000);
-
-      /* WEATHER */
-      async function loadWeather() {
-        let key = "";
-        let loc = "Jakarta";
-
-        if (keyWeather) {
-          key = keyWeather;
-        }
-
-        if (locWeather) {
-          loc = locWeather;
-        }
-
-        // if (username !== null) {
-
-        // }
-
-        console.log(username);
-
-        try {
-          const w = await fetch(
-            `https://api.openweathermap.org/data/2.5/weather?q=${loc}&units=metric&appid=${key}`
-          ).then((r) => r.json());
-
-          if (w.cod !== 200) throw w;
-
-          document.getElementById(
-            "weather"
-          ).textContent = `${loc} • ${Math.round(w.main.temp)}°C ${
-            w.main.humidity
-          }%`;
-        } catch {
-          document.getElementById("weather").textContent =
-            username !== null ? username : "Hola!";
-        }
-      }
-      loadWeather();
-      setInterval(loadWeather, 600000);
-
-      if (username !== null) {
-        document.getElementById("username").textContent = username;
-      } else {
-        document.getElementById("username").textContent = "Good Day!";
-      }
-
-      /* FADE TOGGLE */
-      const dateBox = document.getElementById("dateBox");
-      const weatherBox = document.getElementById("weatherBox");
-      const usernameBox = document.getElementById("usernameBox");
-      let showDate = true;
-
-      let i = 0;
-      setInterval(() => {
-        // showDate = !showDate;
-        if (i == 2) {
-          // date
-          dateBox.classList.toggle("show", showDate);
-          weatherBox.classList.toggle("show", !showDate);
-          usernameBox.classList.toggle("show", !showDate);
-        }
-
-        if (i == 0) {
-          // weather
-          dateBox.classList.toggle("show", !showDate);
-          weatherBox.classList.toggle("show", showDate);
-          usernameBox.classList.toggle("show", !showDate);
-        }
-
-        if (i == 1) {
-          // username
-          dateBox.classList.toggle("show", !showDate);
-          weatherBox.classList.toggle("show", !showDate);
-          usernameBox.classList.toggle("show", showDate);
-        }
-
-        i++;
-
-        if (i > 2) {
-          i = 0;
-        }
-      }, 5000);
-    </script>
-  </body>
-</html>
+<!doctypehtml><html lang=en><meta charset=UTF-8><title>Compact 7-Segment Clock</title><style>:root{--led-on:red;--led-off:#ffffff1f;--glow:0 0 30px white}body{margin:0;height:100vh;display:flex;justify-content:center;align-items:end;background:0 0;font-family:monospace;overflow:hidden}.wrapper{display:flex;flex-direction:column;align-items:center;gap:0}.clock{display:flex;gap:14px;background:#111;padding:16px 26px;border-radius:14px}.digit{position:relative;width:50px;height:86px}.seg{position:absolute;background:var(--led-off);border-radius:4px}.on{background:var(--led-on);box-shadow:var(--glow)}.a{top:0;left:8px;width:34px;height:6px}.b{top:6px;right:0;width:6px;height:34px}.c{bottom:6px;right:0;width:6px;height:34px}.d{bottom:0;left:8px;width:34px;height:6px}.e{bottom:6px;left:0;width:6px;height:34px}.f{top:6px;left:0;width:6px;height:34px}.g{top:40px;left:8px;width:34px;height:6px}.colon{display:flex;flex-direction:column;justify-content:space-around;padding:16px 0}.dot{width:8px;height:8px;background:var(--led-on);box-shadow:var(--glow);border-radius:50%}.info{position:relative;height:60px;width:100%;margin-top:12px}.fade-item{position:absolute;inset:0;display:flex;justify-content:center;align-items:center;opacity:0;transform:translateY(6px);transition:opacity .8s ease,transform .8s ease}.fade-item.show{opacity:1;transform:translateY(0)}.date,.username,.weather{font-size:50px;color:var(--led-on);text-shadow:var(--glow);text-wrap:nowrap;font-weight:bolder}</style><div class=wrapper><div class=clock id=clock></div><div class=info><div class="fade-item show"id=dateBox><div class=date id=date></div></div><div class=fade-item id=weatherBox><div class=weather id=weather>Loading…</div></div><div class=fade-item id=usernameBox><div class=username id=username></div></div></div></div><script>const queryString=window.location.search,urlParams=new URLSearchParams(queryString),username=urlParams.get("u"),keyWeather=urlParams.get("key"),locWeather=urlParams.get("loc"),map={0:["a","b","c","d","e","f"],1:["b","c"],2:["a","b","g","e","d"],3:["a","b","g","c","d"],4:["f","g","b","c"],5:["a","f","g","c","d"],6:["a","f","e","d","c","g"],7:["a","b","c"],8:["a","b","c","d","e","f","g"],9:["a","b","c","d","f","g"]};function digit(){const e=document.createElement("div");return e.className="digit","abcdefg".split("").forEach((t=>{const a=document.createElement("div");a.className=`seg ${t}`,e.appendChild(a)})),e}function setDigit(e,t){e.querySelectorAll(".seg").forEach((e=>e.classList.remove("on"))),map[t].forEach((t=>e.querySelector("."+t).classList.add("on")))}const clock=document.getElementById("clock"),digits=[];for(let e=0;e<6;e++){if(2===e||4===e){const e=document.createElement("div");e.className="colon",e.innerHTML="<div class='dot'></div><div class='dot'></div>",clock.appendChild(e)}const t=digit();digits.push(t),clock.appendChild(t)}function updateDate(){const e=new Date;document.getElementById("date").textContent=`${["MIN","SEN","SEL","RAB","KAM","JUM","SAB"][e.getDay()]} • ${e.getDate()}-${e.getMonth()+1}-${e.getFullYear()}`}async function loadWeather(){let e="",t="Jakarta";keyWeather&&(e=keyWeather),locWeather&&(t=locWeather),console.log(username);try{const a=await fetch(`https://api.openweathermap.org/data/2.5/weather?q=${t}&units=metric&appid=${e}`).then((e=>e.json()));if(200!==a.cod)throw a;document.getElementById("weather").textContent=`${t} • ${Math.round(a.main.temp)}°C ${a.main.humidity}%`}catch{document.getElementById("weather").textContent=null!==username?username:"Hola!"}}setInterval((()=>{const e=new Date;[...e.getHours().toString().padStart(2,"0")+e.getMinutes().toString().padStart(2,"0")+e.getSeconds().toString().padStart(2,"0")].forEach(((e,t)=>setDigit(digits[t],e)))}),1e3),updateDate(),setInterval(updateDate,6e4),loadWeather(),setInterval(loadWeather,6e5),document.getElementById("username").textContent=null!==username?username:"Good Day!";const dateBox=document.getElementById("dateBox"),weatherBox=document.getElementById("weatherBox"),usernameBox=document.getElementById("usernameBox");let showDate=!0,i=0;setInterval((()=>{2==i&&(dateBox.classList.toggle("show",showDate),weatherBox.classList.toggle("show",!showDate),usernameBox.classList.toggle("show",!showDate)),0==i&&(dateBox.classList.toggle("show",!showDate),weatherBox.classList.toggle("show",showDate),usernameBox.classList.toggle("show",!showDate)),1==i&&(dateBox.classList.toggle("show",!showDate),weatherBox.classList.toggle("show",!showDate),usernameBox.classList.toggle("show",showDate)),i++,i>2&&(i=0)}),5e3)</script>
