--- a/status.html
+++ b/status.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vertical Dark</title>
+    <title>Status</title>
     <link rel="icon" href="./assets/icons/favicon.ico" />
     <link
       href="https://fonts.googleapis.com/css2?family=Noto+Color+Emoji&display=swap"
