change color into red

--- a/flipclock.html
+++ b/flipclock.html
@@ -18,10 +18,10 @@
         /* margin: 100px auto; */
         width: 100%;
         display: flex;
-        gap: 30px;
+        gap: 12px;
         font-family: sans-serif;
 
-        border: 4px solid black;
+        /* border: 4px solid black; */
         padding: 4% 6%;
         border-radius: 75px;
         align-items: center;
@@ -60,13 +60,13 @@
 
       .segment-display__top {
         line-height: 1.5;
-        color: #eee;
+        color: red;
         background-color: #111;
       }
 
       .segment-display__bottom {
         line-height: 0;
-        color: #fff;
+        color: red;
         background-color: #272727;
       }
 
@@ -90,7 +90,7 @@
       .segment-overlay__top {
         top: 0;
         line-height: 1.5;
-        color: #fff;
+        color: red;
         background-color: #111;
         transform-origin: bottom;
       }
@@ -98,7 +98,7 @@
       .segment-overlay__bottom {
         bottom: 0;
         line-height: 0;
-        color: #eee;
+        color: red;
         background-color: #333;
         border-top: 2px solid #555;
         transform-origin: top;
