change top color bit darker red

--- a/flipclock.html
+++ b/flipclock.html
@@ -60,7 +60,7 @@
 
       .segment-display__top {
         line-height: 1.5;
-        color: red;
+        color: #d70000;
         background-color: #111;
       }
 
@@ -90,7 +90,7 @@
       .segment-overlay__top {
         top: 0;
         line-height: 1.5;
-        color: red;
+        color: #d70000;
         background-color: #111;
         transform-origin: bottom;
       }
