--- a/simplesideway.html
+++ b/simplesideway.html
@@ -16,6 +16,7 @@
         max-width: 100%;
         overflow-x: hidden;
         height: auto;
+        background: black;
       }
 
       #chat {
@@ -47,9 +48,9 @@
       .visible {
         border: 1px solid whitesmoke;
         padding: 2%;
-        background-color: #193c47;
+        background: linear-gradient(180deg, #fff, #fff);
 
-        border-left: 5px solid #1fb6ff;
+        border-left: 5px solid whitesmoke;
         border-radius: 10px;
 
         padding: 14px 18px;
@@ -59,14 +60,14 @@
       .msg-content {
         display: flex;
         flex-direction: row;
-        max-width: 380px;
+        max-width: 333px;
         align-items: center;
-        color: whitesmoke;
-        font-size: 16px;
+        color: #333;
+        font-size: 20px;
       }
 
       .name {
-        font-size: 18px;
+        font-size: 22px;
         font-weight: bold;
         margin-bottom: 4px;
       }
@@ -74,11 +75,18 @@
       .text {
         direction: ltr; /* FIX */
         text-align: left; /* FIX */
-        max-width: 395px;
+        max-width: 326px;
         white-space: nowrap;
         overflow: hidden;
         text-overflow: ellipsis;
       }
+
+      .row {
+        display:flex;
+        flex-direction: row-reverse;
+        gap:15px;
+      }
+
     </style>
   </head>
   <body>
@@ -137,13 +145,9 @@
                             : d.chatmessage || ""
                         }</div>
                     </div>
-                    <div class="avatar"
-                      style="background-image:url('${avatarURL}')"
-                      onerror="this.style.backgroundImage='url(${defaultAvatar})'">
-                    </div>
                 </div>
-                </div>
-                `;
+            </div>
+            `;
         // <div class="time">${timeStr}</div>
 
         chat.appendChild(div);
