--- a/texthorizontal.html
+++ b/texthorizontal.html
@@ -47,6 +47,7 @@
         overflow: hidden;
         white-space: nowrap;
         text-overflow: ellipsis;
+        color: #333;
       }
 
       .visible {
