--- a/texthorizontal.html
+++ b/texthorizontal.html
@@ -48,6 +48,7 @@
         white-space: nowrap;
         text-overflow: ellipsis;
         color: #000;
+        font-weight: bold;
       }
 
       .visible {
@@ -55,7 +56,7 @@
       }
 
       .chatname {
-        font-weight: 700;
+        font-weight: bolder;
       }
     </style>
   </head>
