--- a/texthorizontal.html
+++ b/texthorizontal.html
@@ -47,7 +47,7 @@
         overflow: hidden;
         white-space: nowrap;
         text-overflow: ellipsis;
-        color: #000;
+        color: whitesmoke;
         font-weight: bold;
       }
 
