--- a/texthorizontal.html
+++ b/texthorizontal.html
@@ -19,7 +19,7 @@
       #chat {
         display: flex;
         /* flex-direction: row; */
-        gap: 20px;
+        /* gap: 20px; */
         align-items: flex-start;
 
         overflow: hidden;
