--- a/vertical.html
+++ b/vertical.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -34,10 +34,6 @@
           format("woff");
       }
 
-      /* #output {
-        min-height: 100px;
-      } */
-
       * {
         margin: 0;
         padding: 0;
@@ -45,16 +41,14 @@
         font-style: normal;
       }
 
-      body, html {
+      body,
+      html {
         font-family: "San Francisco", sans-serif;
         -webkit-font-smoothing: antialiased;
         margin: 0;
         padding: 0;
         width: auto;
         height: auto;
-        /* display: flex; */
-        /* align-items: center; */
-        /* justify-content: center; */
         /* background: url("https://images.unsplash.com/photo-1501785888041-af3ef285b470?auto=format&fit=crop&w=3840&q=80")
           center/cover no-repeat; */
         background: transparent;
@@ -75,40 +69,58 @@
         line-height: 1.4;
       }
 
-      #container {
+      #container,
+      #output {
         width: 100%;
         max-width: 800px;
       }
 
-      .style-glass .message-wrapper {
-        /* border-radius: 70px; */
-        /* border: 3px solid rgba(255, 255, 255, 0.18); */
-      }
+      .message-wrapper {
+        opacity: 0;
+        transform: translateX(-50%) scale(0.95) translateY(20px);
+        /* filter: blur(10px); */
+        transition:
+          opacity 0.8s ease,
+          transform 0.8s ease,
+          filter 0.8s ease;
 
-      .message-wrapper.show {
-        opacity: 1;
-        /* transform: translateY(0px); */
-        /* margin: 0 2%; */
-        display: flex;
-        flex-direction: column;
-        align-items: stretch;
-        /* background: #353535; */
         position: absolute;
         left: 50%;
         bottom: 0;
-        transform: translateX(-50%);
         width: 100%;
         max-width: 350px;
-        /* padding: 0 20px; */
-        box-sizing: border-box;
-        /* border-radius: 2%; */
         margin-bottom: 1%;
       }
 
+      .message-wrapper.show {
+        display: flex;
+        flex-direction: column;
+        align-items: stretch;
+        position: absolute;
+        left: 50%;
+        bottom: 0;
+        width: 100%;
+        max-width: 350px;
+        box-sizing: border-box;
+        margin-bottom: 1%;
+
+        transform: translateX(-50%) scale(1) translateY(0);
+      }
+
       .message-wrapper.hide {
+        display: flex;
+        flex-direction: column;
+        align-items: stretch;
+        position: absolute;
+        left: 50%;
+        bottom: 0;
+        width: 100%;
+        max-width: 350px;
+        box-sizing: border-box;
+        margin-bottom: 1%;
+
         opacity: 0;
-        transform: scale(1.1) translateY(-20px);
-        filter: blur(10px);
+        transform: translateX(-50%) scale(1.1) translateY(-20px);
       }
 
       .avatar {
@@ -117,10 +129,6 @@
         border-radius: 2%;
         object-fit: cover;
         flex-shrink: 0;
-        /* margin-left: 2%; */
-        /* border: 2px solid #000; */
-        /* box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px; */
-        /* margin:2%; */
         background: whitesmoke;
         border: 7px solid #353535;
         border-radius: 30px;
@@ -135,11 +143,7 @@
         gap: 30px;
         position: relative;
         padding: 0;
-        /* z-index: 99; */
-        /* backdrop-filter: blur(2px); */
-        /* margin: 0% 0%; */
         background: #353535;
-        /* border-radius: 0 0 30px 30px; */
         position: relative;
         overflow: hidden;
         padding: 50px 28px 28px 28px;
@@ -152,71 +156,28 @@
         gap: 10px;
         position: relative;
         padding: 0;
-        /* z-index: 99; */
-        /* backdrop-filter: blur(2px); */
-        /* margin: 3%; */
         background: goldenrod;
         border-radius: 0 0 25px 25px;
         position: relative;
         overflow: hidden;
         padding: 2% 5%;
-        /* margin-top: -1%; */
       }
 
       .username {
-        /* font-weight: 500; */
         font-size: 25px;
         display: flex;
         align-items: center;
         gap: 8px;
         font-weight: bolder;
-        /* font-size: x-large; */
-        /* margin-bottom: 1%; */
-        /* border: 1px solid #181818; */
-        /* border-radius: 60px; */
-        /* background: #fff; */
         color: black !important;
-        /* padding: 2%; */
-        /* position: absolute; */
-        /* top: 2%; */
-        /* left: 15%; */
-        /* z-index: 99; */
-        /* box-shadow: rgba(0, 0, 0, 0.35) 0px 3px 10px; */
-        /* align-items: center; */
         overflow-wrap: anywhere;
-        /* text-shadow: 0 5px 4px rgba(0, 0, 0, 0.3); */
       }
 
       .text {
         color: #fff !important;
-        /* text-shadow: 0 5px 4px rgba(0, 0, 0, 0.3); */
         font-size: x-large;
         font-weight: 500;
       }
-
-      /* Tail */
-      /* .style-glass .message-wrapper::after {
-        content: "";
-        position: absolute;
-        bottom: 40%;
-        left: 3.1%;
-        width: 0;
-        height: 0;
-        border-left: 24px solid transparent;
-        border-right: 0px solid #1f8aff;
-        border-bottom: 44px solid #1f8aff;
-      }
-      .style-glass .message-wrapper::before {
-        content: "";
-        position: absolute;
-        bottom: 40%;
-        left: 5.1%;
-        width: 0;
-        height: 0;
-        border-left: 6px solid transparent;
-        border-right: 22px solid transparent;
-        border-top: 41px solid #1f8aff;
-      } */
 
       .texture {
         position: absolute;
@@ -224,7 +185,7 @@
         width: 100%;
         height: 100%;
         object-fit: cover;
-        mix-blend-mode: screen; /* TikTok-safe */
+        mix-blend-mode: screen;
         opacity: 0.6;
         pointer-events: none;
       }
@@ -310,25 +271,6 @@
         margin-top: 12px;
         border-radius: 8px;
       }
-
-      /* @media (max-width: 600px) {
-        .message {
-          padding: 16px;
-        }
-
-        .avatar {
-          width: 48px;
-          height: 48px;
-        }
-
-        .username {
-          font-size: 16px;
-        }
-
-        .text {
-          font-size: 18px;
-        }
-      } */
     </style>
   </head>
   <body>
@@ -345,17 +287,15 @@
         urlParams.get("room") ||
         urlParams.get("roomid") ||
         "TESTROOM";
-      // const style = urlParams.get("style") || "glass";
       const password =
         urlParams.get("password") ||
         urlParams.get("pass") ||
         urlParams.get("pw") ||
         "false";
       const showtime = parseInt(
-        urlParams.get("showtime") || urlParams.get("timer") || "30000"
+        urlParams.get("showtime") || urlParams.get("timer") || "30000",
       );
       const pseudodock = urlParams.has("autoshow");
-      // document.body.className = `style-glass`;
 
       let messageTimeout = null;
       let currentMessage = null;
@@ -364,14 +304,12 @@
         var iframe = document.createElement("iframe");
 
         if (pseudodock) {
-          // Connect as dock to receive direct messages
           iframe.src =
             "https://vdo.socialstream.ninja/?ln&salt=vdo.ninja&password=" +
             password +
             "&push&notmobile&label=dock&vd=0&ad=0&novideo&noaudio&autostart&cleanoutput&room=" +
             roomID;
         } else {
-          // Standard overlay connection
           iframe.src =
             "https://vdo.socialstream.ninja/?ln&password=" +
             password +
@@ -400,10 +338,9 @@
         eventer(messageEvent, function (e) {
           if (e.source != iframe.contentWindow) {
             return;
-          } // reject messages send from other iframes
+          }
 
           if ("dataReceived" in e.data) {
-            // raw data
             if ("overlayNinja" in e.data.dataReceived) {
               if (
                 e.data.dataReceived.overlayNinja &&
@@ -411,7 +348,6 @@
               ) {
                 // pass
               } else {
-                // Handle pseudodock format
                 if (
                   pseudodock &&
                   e.data.dataReceived.overlayNinja &&
@@ -427,34 +363,26 @@
         });
       }
 
-      // Process incoming messages
       function processData(data) {
-        // Handle clear command
         if (!data || data === false) {
           hideMessage();
           return;
         }
 
-        // Handle different data formats
         if (data.contents === false) {
           hideMessage();
           return;
         }
 
-        // If data has contents property, use it
         if (data && data.contents) {
           showMessage(data.contents);
-        }
-        // If data has content property (from dock)
-        else if (data && "content" in data) {
+        } else if (data && "content" in data) {
           if (data.content) {
             processData({ contents: data.content });
           } else {
             hideMessage();
           }
-        }
-        // If data has action property
-        else if (data.action && "value" in data && data.action == "content") {
+        } else if (data.action && "value" in data && data.action == "content") {
           if (data.value) {
             try {
               const parsed = JSON.parse(data.value);
@@ -467,9 +395,7 @@
           } else {
             hideMessage();
           }
-        }
-        // Direct message format
-        else if (data && "chatmessage" in data) {
+        } else if (data && "chatmessage" in data) {
           showMessage(data);
         }
       }
@@ -485,7 +411,6 @@
           const message = document.createElement("div");
           message.className = "message";
 
-          // Avatar
           const avatar = document.createElement("img");
           avatar.className = "avatar";
 
@@ -513,11 +438,6 @@
           const contentDiv = document.createElement("div");
           contentDiv.className = "message-content";
 
-          // message.appendChild(header);
-
-          
-
-          // Donation/Membership info
           if (content.hasDonation || content.membership) {
             const donationDiv = document.createElement("div");
             donationDiv.className = "donation-info";
@@ -535,7 +455,6 @@
             contentDiv.appendChild(donationDiv);
           }
 
-          // Content image (stickers, etc)
           if (content.contentimg) {
             const img = document.createElement("img");
             img.className = "content-image";
@@ -543,11 +462,9 @@
             contentDiv.appendChild(img);
           }
 
-          // footer
           const footerDiv = document.createElement("div");
           footerDiv.className = "footer";
 
-          // Source icon
           if (content.type) {
             const sourceIcon = document.createElement("img");
             sourceIcon.className = "source-icon";
@@ -558,7 +475,6 @@
             footerDiv.appendChild(sourceIcon);
           }
 
-          // username and badges
           const header = document.createElement("div");
           header.className = "username";
 
@@ -571,7 +487,6 @@
             header.appendChild(name);
           }
 
-          // Badges
           if (content.chatbadges && Array.isArray(content.chatbadges)) {
             const badges = document.createElement("div");
             badges.className = "badges";
@@ -591,7 +506,6 @@
             contentDiv.appendChild(badges);
           }
 
-          // Message text
           if (content.chatmessage) {
             const text = document.createElement("div");
             text.className = "text";
@@ -612,24 +526,18 @@
           output.innerHTML = "";
           output.appendChild(wrapper);
 
-          // Trigger animation
+          wrapper.classList.add("hide");
+          wrapper.offsetHeight; 
+
+          wrapper.classList.remove("hide");
+          wrapper.classList.add("show");
+
           requestAnimationFrame(() => {
             wrapper.classList.add("show");
           });
 
           currentMessage = wrapper;
 
-          // TTS support
-          if (window.initTTS && urlParams.has("tts")) {
-            const ttsText = content.chatmessage
-              ? content.chatmessage.replace(/<[^>]*>/g, "")
-              : "";
-            if (ttsText) {
-              window.speak(content.chatname + " says " + ttsText);
-            }
-          }
-
-          // Auto-hide after showtime
           // if (messageTimeout) clearTimeout(messageTimeout);
           // messageTimeout = setTimeout(() => {
           //   hideMessage();
@@ -637,7 +545,6 @@
         });
       }
 
-      // Hide current message
       function hideMessage(callback) {
         if (messageTimeout) {
           clearTimeout(messageTimeout);
@@ -653,7 +560,7 @@
             }
             currentMessage = null;
             if (callback) callback();
-          }, 800); // Increased to match longest animation
+          }, 800);
         } else if (callback) {
           callback();
         }
