--- a/status.html
+++ b/status.html
@@ -48,10 +48,11 @@
         padding: 0;
         width: auto;
         height: auto;
-        background: url("https://images.unsplash.com/photo-1501785888041-af3ef285b470?auto=format&fit=crop&w=3840&q=80");
+        /* background: url("https://images.unsplash.com/photo-1501785888041-af3ef285b470?auto=format&fit=crop&w=3840&q=80");
         background-position: center;
         background-repeat: no-repeat;
-        backdrop-filter: none;
+        backdrop-filter: none; */
+        background: transparent;
         overflow: hidden;
       }
 
