--- a/status.html
+++ b/status.html
@@ -306,9 +306,7 @@
         urlParams.get("pass") ||
         urlParams.get("pw") ||
         "false";
-      const showtime = parseInt(
-        urlParams.get("showtime") || urlParams.get("timer") || "30000",
-      );
+      const showtime = 10000;
       const pseudodock = urlParams.has("autoshow");
 
       let messageTimeout = null;
@@ -534,14 +532,10 @@
 
           currentMessage = wrapper;
 
-          if (window.initTTS && urlParams.has("tts")) {
-            const ttsText = content.chatmessage
-              ? content.chatmessage.replace(/<[^>]*>/g, "")
-              : "";
-            if (ttsText) {
-              window.speak(content.chatname + " says " + ttsText);
-            }
-          }
+          if (messageTimeout) clearTimeout(messageTimeout);
+          messageTimeout = setTimeout(() => {
+            hideMessage();
+          }, showtime);
         });
       }
 
