--- a/vertical.html
+++ b/vertical.html
@@ -291,9 +291,7 @@
         urlParams.get("pass") ||
         urlParams.get("pw") ||
         "false";
-      const showtime = parseInt(
-        urlParams.get("showtime") || urlParams.get("timer") || "30000",
-      );
+      const showtime = 10000;
       const pseudodock = urlParams.has("autoshow");
 
       let messageTimeout = null;
@@ -526,7 +524,7 @@
           output.appendChild(wrapper);
 
           wrapper.classList.add("hide");
-          wrapper.offsetHeight; 
+          wrapper.offsetHeight;
 
           wrapper.classList.remove("hide");
           wrapper.classList.add("show");
@@ -537,10 +535,10 @@
 
           currentMessage = wrapper;
 
-          // if (messageTimeout) clearTimeout(messageTimeout);
-          // messageTimeout = setTimeout(() => {
-          //   hideMessage();
-          // }, showtime);
+          if (messageTimeout) clearTimeout(messageTimeout);
+          messageTimeout = setTimeout(() => {
+            hideMessage();
+          }, showtime);
         });
       }
 
