--- a/envelop.html
+++ b/envelop.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -9,8 +9,9 @@
       /* ========== BASE ========== */
       * {
         box-sizing: border-box;
-        font-family: -apple-system, BlinkMacSystemFont, "SF Pro Text",
-          "Helvetica Neue", Arial, sans-serif;
+        font-family:
+          -apple-system, BlinkMacSystemFont, "SF Pro Text", "Helvetica Neue",
+          Arial, sans-serif;
       }
 
       body {
@@ -57,7 +58,8 @@
         box-shadow: 5px -3px 3px rgba(0, 0, 0, 0.45);
         transform: translateX(-50%) translateY(60px);
         opacity: 0;
-        transition: transform 0.9s cubic-bezier(0.22, 0.61, 0.36, 1),
+        transition:
+          transform 0.9s cubic-bezier(0.22, 0.61, 0.36, 1),
           opacity 0.4s ease;
         z-index: 6;
 
@@ -108,7 +110,8 @@
         bottom: 0;
         width: 100%;
         height: 160px;
-        transition: transform 0.7s cubic-bezier(0.22, 0.61, 0.36, 1),
+        transition:
+          transform 0.7s cubic-bezier(0.22, 0.61, 0.36, 1),
           opacity 0.5s ease;
       }
 
@@ -121,7 +124,7 @@
       }
 
       .open .flap-top-wrap {
-        transform: rotateX(0deg);
+        transform: rotateX(1deg);
       }
 
       .flap-top {
@@ -182,7 +185,7 @@
       const urlParams = new URLSearchParams(window.location.search);
       const roomID = urlParams.get("session") || "TESTROOM";
       const password = urlParams.get("password") || "false";
-      const showtime = parseInt(urlParams.get("showtime") || "300000");
+      const showtime = 16000;
       const pseudodock = urlParams.has("autoshow");
 
       let currentEnvelope = null;
@@ -330,7 +333,6 @@
 
         document.getElementById("output").appendChild(env);
 
-
         const cardDiv = document.getElementById("card");
 
         // Content image (stickers, etc)
@@ -357,6 +359,11 @@
           }, 200);
         });
 
+        if (messageTimeout) clearTimeout(messageTimeout);
+        messageTimeout = setTimeout(() => {
+          hideMessage();
+        }, showtime);
+
         return env;
       }
 
@@ -378,8 +385,28 @@
         }
 
         if (currentEnvelope) {
-          currentEnvelope.remove();
-          currentEnvelope = null;
+          // currentEnvelope.remove();
+          // currentEnvelope = null;
+
+          // CLOSED → OPEN → FALL sequence
+          requestAnimationFrame(() => {
+            // ZOOM AFTER FALL
+            setTimeout(() => {
+              // currentEnvelope.classList.remove("open", "fall", "zoom");
+              currentEnvelope.classList.remove("zoom");
+
+              setTimeout(() => {
+                currentEnvelope.classList.remove("fall");
+                setTimeout(() => {
+                  currentEnvelope.classList.remove("open");
+                  setTimeout(() => {
+                    currentEnvelope.remove();
+                    currentEnvelope = null;
+                  }, 800);
+                }, 600);
+              }, 400);
+            }, 200);
+          });
         }
         if (callback) callback();
       }
