--- a/simple.html
+++ b/simple.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -62,8 +62,9 @@
         display: flex;
         align-items: center;
         justify-content: center;
-        /* background: url("https://images.unsplash.com/photo-1501785888041-af3ef285b470?auto=format&fit=crop&w=3840&q=80") center/cover no-repeat; */
-        background: transparent;
+        background: url("https://images.unsplash.com/photo-1501785888041-af3ef285b470?auto=format&fit=crop&w=3840&q=80")
+          center/cover no-repeat;
+        /* background: transparent; */
         backdrop-filter: none;
         overflow: hidden;
       }
@@ -86,23 +87,33 @@
       }
 
       .style-glass .message-wrapper {
-        /* backdrop-filter: blur(2px) brightness(1.1) saturate(1.3); */
-        /* -webkit-backdrop-filter: blur(2px) brightness(1.1) saturate(1.3); */
-        border-radius: 70px;
+        border-radius: 110px;
         border: 1px solid rgba(255, 255, 255, 0.18);
+
+        opacity: 0;
+        transform: translateY(40px) scale(0.96);
+        filter: blur(8px);
+
+        transition:
+          opacity 0.6s ease,
+          transform 0.6s cubic-bezier(0.22, 1, 0.36, 1),
+          filter 0.6s ease;
+
+        will-change: transform, opacity;
       }
 
       .style-glass .message-wrapper.show {
         opacity: 1;
-        transform: translateY(0px);
+        transform: translateY(0) scale(1);
+        filter: blur(0);
         margin: 0 2%;
-        background: rgb(255, 255, 255, 0.7);
+        background: rgba(255, 255, 255, 0.7);
       }
 
       .style-glass .message-wrapper.hide {
         opacity: 0;
-        transform: scale(1.1) translateY(-20px);
-        filter: blur(10px);
+        transform: translateY(-20px) scale(0.98);
+        filter: blur(6px);
       }
 
       .message {
@@ -298,7 +309,7 @@
         urlParams.get("pw") ||
         "false";
       const showtime = parseInt(
-        urlParams.get("showtime") || urlParams.get("timer") || "30000"
+        urlParams.get("showtime") || urlParams.get("timer") || "30000",
       );
       const pseudodock = urlParams.has("autoshow");
       document.body.className = `style-${style}`;
@@ -548,6 +559,9 @@
           const output = document.getElementById("output");
           output.innerHTML = "";
           output.appendChild(wrapper);
+
+          // Force initial state to render
+          wrapper.getBoundingClientRect();
 
           // Trigger animation
           requestAnimationFrame(() => {
